--- a/src/app/components/Navbar.module.css
+++ b/src/app/components/Navbar.module.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    position: sticky;
+    position: fixed;
     /* background-color: red; */
   }
 
@@ -11,4 +11,12 @@
     margin-left: auto;
     font-size: 20px;
     /* background-color: aqua; */
+  }
+
+  .navigation {
+    z-index: 5;
+    position: sticky;
+    top: 18px;
+    cursor: pointer;
+    /* background-color: red; */
   }
