--- a/src/app/components/Navbar.module.css
+++ b/src/app/components/Navbar.module.css
@@ -2,21 +2,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding-top: 10px;
     position: fixed;
-    /* background-color: red; */
+    width: 100%;
+    padding-right: 100px;
+    
   }
 
   .bars {
-    margin-left: auto;
     font-size: 20px;
-    /* background-color: aqua; */
   }
 
-  .navigation {
-    z-index: 5;
-    position: sticky;
-    top: 18px;
-    cursor: pointer;
-    /* background-color: red; */
-  }
+ 
