--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,6 @@ body{
   font-family: 'Helvetica Now Display Light', serif;
   margin-left: 4em;
   margin-right: 4em;
-  height: 2000px;
   overflow: scroll
 }
 
@@ -64,6 +63,18 @@ h1{
   bottom: 5em;
 }
 
+.card-width{
+  width: 48%;
+  background-color: pink;
+}
+
+.w-4{
+  width: 4%;
+  background-color: black;
+}
+
+/* MEDIA QUERIES FOR TABLETS START HERE */
+
 @media (max-width: 950px){
   .mobile{
   position:relative;
@@ -73,8 +84,6 @@ h1{
   .developer{
     display: none;
   }
-
-
 }
 
 
