--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,8 +23,7 @@ h3{
   text-transform:capitalize;
   font-family:'Helvetica Now Display';
   color: #0f141e;
-  margin-top: 50px;
-  margin-bottom: 20px;
+  /* background-color: red; */
 }
 a{
   color:#000000;
