--- a/src/app/components/Footer.module.css
+++ b/src/app/components/Footer.module.css
@@ -2,10 +2,15 @@
 .mainbox {
     /* background-color: red; */
     margin-top: 250px; 
-    align-items:baseline;   
+    align-items:baseline; 
+      
 }
 .h3{
 margin-top: 50px;
+font-size: 1.125rem;
+line-height: 1.5625rem;
+padding-top: 1px;
+padding-bottom: 4px;
 /* background-color: red; */
 }
 .li{
