--- a/src/app/components/Navbar.module.css
+++ b/src/app/components/Navbar.module.css
@@ -7,7 +7,7 @@
     position: fixed;
     width: 100%;
     z-index: 3;
-    background-color: black;
+    /* background-color: black; */
   }
 
   .bars {
