--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@ h5{
   letter-spacing: 0.2em;
   font-size: 0.8em;
   line-height: 0px;
+  color: #878a8f;
 }
 h3{
   text-transform:capitalize;
@@ -44,6 +45,12 @@ h1{
   font-family: 'Helvetica Now Display', sans-serif;
   line-height: 1;
   
+ }
+ h2{
+  color:#000000;
+  font-size: 2em;
+  font-family: 'Helvetica Now Display', sans-serif;
+  line-height: 1;
  }
 
  p{
@@ -83,14 +90,14 @@ h1{
     height: 100%;
     margin: 0 auto;
   }
->h1{
-  height: 20%;
+>h5{
+  height: 5%;
 }
 >div{
-  height: 60%;
+  height: 75%;
 }
 >h2{
-  height: 20%;
+  height: 10%;
 }
 
 }
@@ -128,18 +135,48 @@ h1{
   .mobile{
     position:relative;
     top: 200px;
-    
     /* background-color: red; */
   }
+  .centering{
+
+    margin-bottom: 80px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+  .text {
+    margin-right: 0.5rem;
+    white-space: nowrap; /* Evita el salto de línea del texto */
+    /* background-color: red; */
+    font-size: 2.125rem;
+    line-height: 2.5rem;
+    padding-top: 2px;
+    padding-bottom: 3px;
+  }
   
+    
   .developer{
     display: none;
+  }
+  h2{
+    font-size: 1em;
   }
 }
 @media (min-width: 950px){
 .large-screen{
   position:relative;
     top: 150px;
+}
+.centering{
+
+  margin-bottom: 80px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
 }
 
 }
@@ -148,14 +185,24 @@ h1{
   .center-needadeveloper-text{
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     padding: 20px;
   }
+
+
+  .text {
+    margin-right: 0.5rem;
+    white-space: nowrap; /* Evita el salto de línea del texto */
+    font-size: 3.875rem;
+    line-height: 4.0625rem;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
  
 }
 
-/* together page */
+
 
 
 
