--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,10 +21,11 @@ h5{
   color: #878a8f;
 }
 h3{
-  text-transform:capitalize;
+  /* text-transform:capitalize; */
   font-family:'Helvetica Now Display';
   color: #0f141e;
   margin-bottom: 20px;
+  letter-spacing: normal;
   /* background-color: red; */
 }
 a{
@@ -43,7 +44,7 @@ h1{
   color:#000000;
   font-size: 3.5em;
   font-family: 'Helvetica Now Display', sans-serif;
-  line-height: 1;
+  line-height: 3rem;
   
  }
  h2{
@@ -135,7 +136,6 @@ h1{
   .mobile{
     position:relative;
     top: 200px;
-    /* background-color: red; */
   }
   .centering{
 
@@ -199,7 +199,29 @@ h1{
     padding-bottom: 5px;
   }
 
- 
+  .large-screen{
+    position:relative;
+      top: 150px;
+
+  }
+}
+
+/* read about me classes */
+
+.mainBox-about{
+  display: block;
+  /* justify-content: center; */
+  text-align: center;
+  width: 75%!important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.h3class-about{
+  color: #878a8f;
+  font-family: 'Helvetica Now Display Light' !important;
+  font-size: 1.375rem
+
 }
 
 
