responsive read about me view ready

--- a/src/app/components/Footer.module.css
+++ b/src/app/components/Footer.module.css
@@ -18,6 +18,16 @@ padding-bottom: 4px;
 }
 
 
+@media(max-width: 950px){
+.mainbox{
+    margin-top: 0px;
+}
+.h3{
+    margin-top: 20px;
+}
+}
+
+
 
   
 
