--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -278,7 +278,7 @@ h3 strong{
   border-bottom: none !important;
 }
 
-/* lets work together classes */
+/* contact classes */
 
 .crmap-size{
   > img{ 
@@ -287,6 +287,49 @@ h3 strong{
     background-color: red;
   }
 }
+.input-container input{
+  background: #fff;
+  width: 100%;
+  height: 45px;
+  font-size: 1.125rem;
+  line-height: 1.875rem;
+  font-weight: 500;
+  color: #000000;
+  padding: 8px 0 6px 0;
+  border: 1px solid #e7e8e9;
+  border-width: 0 0 1px 0;
+  margin-bottom: 40px;
+  /* background-color:pink; */
+}
+.input-container label{
+  color:#878a8f;
+}
+
+.input-container input:focus{
+  outline: none;
+  /* background-color: aqua; */
+}
+::placeholder{
+  color:#000000;
+}
+select{
+  background: #fff;
+  width: 100%;
+  /* background-size: 20px 20px; */
+  color: #0f141e;
+  width: 100%;
+  height: 50px;
+  /* font-size: 1.125rem; */
+  line-height: 50px;
+  font-weight: 500;
+  color: #0f141e;
+  cursor: pointer;
+  padding: 1px 50px 0 20px;
+  border: 1px solid #e7e8e9;
+  /* transition: all .2s cubic-bezier(.3,0,.5,1); */
+}
+
+
   
 
 
