--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -328,7 +328,28 @@ select{
   border: 1px solid #e7e8e9;
   /* transition: all .2s cubic-bezier(.3,0,.5,1); */
 }
+.message-input {
+  width: 100%;
+  height: auto; 
+  resize: none;
+  padding: 10px;
+  font-size: 16px;
+  outline: none;
+  border: 1px solid #e7e8e9;
+  border-width: 0 0 1px 0;
+}
+.color-grey{
+  color:#878a8f; 
+}
+ .message-section button{
+  background-color: #fff;
+  border: none;
+  font-size: 1.425rem;
+  line-height: 1.875rem;
+  font-weight: 800;
+ }
 
+  
 
   
 
