--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -242,6 +242,17 @@ p {
     margin-left: auto;
     margin-right: auto;
   }
+  .margin-separation {
+    margin-top: 100px;
+    width: 75%;
+    margin: 0 auto;
+  }
+  .message-section {
+    background-color: red;
+    display: flex;
+    width: 50%;
+    margin: 0 auto;
+  }
 }
 
 /* read about me classes */
@@ -343,4 +354,9 @@ select {
 .submit-class {
   margin-top: 50px;
   margin-bottom: 60px;
+}
+.footer {
+  position: relative;
+  top: 250px;
+  /* background-color: red; */
 }
