--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -244,13 +244,21 @@ p {
   }
   .margin-separation {
     margin-top: 100px;
-    width: 75%;
+    width: 85%;
     margin: 0 auto;
   }
-  .message-section {
-    background-color: red;
-    display: flex;
-    width: 50%;
+  .got-a-project {
+    color: #878a8f;
+    width: 85%;
+    font-size: 1.375rem;
+  }
+
+  .input-container {
+    width: 85%;
+  }
+
+  .crmap-size {
+    width: 85%;
     margin: 0 auto;
   }
 }
@@ -341,7 +349,7 @@ select {
   border-width: 0 0 1px 0;
 }
 
-.color-grey {
+.got-a-project {
   color: #878a8f;
 }
 .message-section button {
