--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -301,7 +301,7 @@ select {
 
 @media (min-width: 950px) {
   .centering {
-    margin-bottom: 80px;
+    padding-bottom: 20px;
     align-items: center;
     display: flex;
     flex-direction: column;
