--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,12 +87,13 @@ p {
   bottom: 5em;
 }
 
-.card-componet {
+.card-component {
   width: min(100%, 500px);
   height: 500px;
   border: #6c757d 1px solid;
   border-radius: 10px;
   box-shadow: 0px 0px 5px rgba(130, 128, 128, 0.322);
+  cursor: pointer;
 
   > div > img {
     display: block;
@@ -111,8 +112,9 @@ p {
   }
 }
 
-.w-4 {
-  width: 4%;
+.card-component:hover {
+  background-color: paleturquoise;
+  transition: all 1s;
 }
 
 .cards-father {
@@ -127,6 +129,17 @@ p {
 .viewport-screen-100 {
   width: 100vw;
   height: 100vh;
+}
+
+/* Navbar styling */
+.logo {
+  color: #0f141e;
+}
+
+.logo:hover {
+  background-color: yellow;
+  color: #a4abb0;
+  transition: all 10s;
 }
 
 /* Portfolio component styles */
@@ -211,7 +224,6 @@ select {
   width: 100%;
   height: auto;
   resize: none;
-  /* padding: 10px; */
   font-size: 1.125rem;
   font-weight: 500;
   outline: none;
@@ -236,7 +248,6 @@ select {
 .footer {
   position: relative;
   top: 250px;
-  /* background-color: red; */
 }
 
 /* MEDIA QUERIES START HERE */
