--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,6 +174,10 @@ h3 strong {
   color: #878a8f;
   border-bottom: none !important;
 }
+.carousel-inner {
+  width: 100%;
+  height: 500px;
+}
 
 /* contact classes */
 
@@ -327,7 +331,6 @@ select {
 
   .mainBox-about {
     width: 100% !important;
-    /* background-color: pink;    */
   }
 
   body {
@@ -397,15 +400,6 @@ select {
   .crmap-size {
     width: 85%;
     margin: 0 auto;
-  }
-  .main-div {
-    margin-top: 50px;
-    /* width: 40%;
-    margin: 0 auto; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 20px;
   }
 }
 @media screen and (min-width: 765px) and (max-width: 950px) {
