--- a/src/app/components/Navbar.module.css
+++ b/src/app/components/Navbar.module.css
@@ -14,6 +14,10 @@
   font-size: 20px;
   /* background-color: red; */
 }
+.nonbars {
+  font-size: 20px;
+  color: #878a8f;
+}
 
 .menuMainDiv {
   background-color: aquamarine;
@@ -31,6 +35,7 @@
 }
 .ul {
   list-style: none;
+  margin: 0 auto;
 }
 /* ::selection {
   background-color: #878a8f;
