--- a/src/app/components/NeedADeveloper.module.css
+++ b/src/app/components/NeedADeveloper.module.css
@@ -1,20 +1,11 @@
-
 .mainbox {
-   /* background-color: blue; */
-   margin-top: 80px;
-       
+  margin-top: 80px;
 }
 
-.need{
-    font-size: .875rem;
-    line-height: 1.25rem;
-    text-transform: uppercase;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    /* background-color: yellow; */
+.need {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  text-transform: uppercase;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
-
-  /* information component styles */
-
-  
-
