--- a/src/app/components/Navbar.module.css
+++ b/src/app/components/Navbar.module.css
@@ -21,12 +21,13 @@
 
 .menuMainDiv {
   position: fixed;
-  top: 60px;
+  top: 0px;
   z-index: 9999;
-  color: #878a8f;
+  color: #878a8f !important;
   background-color: #0f141e;
   height: 100%;
   width: 100%;
+  padding-top: 150px;
 }
 .align {
   display: flex;
@@ -34,8 +35,20 @@
 }
 .ul {
   list-style: none;
-  margin: 0 auto;
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  padding-right: 35px;
+  color: #878a8f !important;
+
+  /* height: 100vh; */
+}
+.ul a {
+  color: inherit; /* Usa el color definido en el contenedor ul */
+  text-decoration: none;
+}
+.ul a:hover {
+  color: aliceblue;
 }
