--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,8 +48,8 @@ h4 {
 }
 
 a {
-  color: #000000 !important;
-  font-family: "Helvetica Now Display" !important;
+  color: #000000;
+  font-family: "Helvetica Now Display";
   text-decoration: none;
   text-transform: capitalize;
 }
@@ -320,8 +320,6 @@ select {
     line-height: 2.5rem;
     padding-top: 2px;
     padding-bottom: 3px;
-    color: red;
-    text-decoration: none;
   }
 
   .developer {
