--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -426,5 +426,9 @@ select {
 
 .read-view a {
   color: #000000;
-  /* text-decoration: none; */
+  text-decoration: none;
+}
+.read-view a:hover {
+  text-decoration: underline;
+  color: #000000;
 }
